--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PKU Intelligence</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+          "Segoe UI Emoji", "Segoe UI Symbol";
+        /* 从左上浅红到右下浅蓝的渐变背景 */
+        background: linear-gradient(135deg, #fffbfb 0%, #f9fcff 100%);
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
